<resources>
    <string name="app_name" translatable="false">CasperVPN</string>
    <string name="app_name_upper" translatable="false">CASPERVPN</string>
    <string name="google_android_map_api_key" translatable="false">AIzaSyBP2ugjBnj9F5RIsn0pRy05sMuy2ErjYV8</string>
    <string name="intercom_gcm_sender_id" translatable="false">905164611190</string>
    <string name="facebook_app_id" translatable="false">588867667976339</string>
    <string name="FabricApiKey" translatable="false">77cfc5fb0e4f1d591601ff0a4d91d2c78d5ad091</string>
    <string name="English" translatable="false">English</string>
    <string name="French" translatable="false">Français</string>
    <string name="German" translatable="false">Deutsche</string>
    <string name="Russian" translatable="false">Pусский</string>
    <string name="Spanish" translatable="false">Español</string>
    <string name="Turkish" translatable="false">Türkçe</string>
    <string name="Arabic" translatable="false">عربي</string>
    <string name="Persian" translatable="false">فارسي</string>
    <string name="Chinese" translatable="false">中文</string>
    <string name="Hindi" translatable="false">हिंदी</string>
    <string name="PPTP" translatable="false">PPTP</string>
    <string name="SSTP" translatable="false">SSTP</string>
    <string name="L2TPOverIPSec" translatable="false">L2TP/IPSec</string>
    <string name="OpenVPN" translatable="false">OpenVPN</string>
    <string name="IKEv2" translatable="false">IKEv2</string>
    <string name="PPTPPorts" translatable="false">TCP 1723\nGRE</string>
    <string name="SSTPPorts" translatable="false">TCP 443</string>
    <string name="L2TPPorts" translatable="false">UDP 1701\nUDP 500\nUDP 4500\nESP</string>
    <string name="OpenVPNPorts" translatable="false">TCP 993\nTCP 443</string>
    <string name="IKEv2Ports" translatable="false">UDP 500</string>
    <string name="statusline_bytecount" translatable="false">↓%2$s/s %1$s - ↑%4$s/s %3$s</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="CasperiseTo" translatable="false">Casperise to</string>
    <string name="EmailHint" translatable="false">example@gmail.com</string>
    <string name="PasswordHint" translatable="false">********</string>
    <string name="DiscountAmount" translatable="false">10</string>
    <string name="Percent" translatable="false">%</string>
    <string name="Mbps" translatable="false">Mbps</string>
    <string name="GB" translatable="false">GB</string>
    <string name="SelectedLanguage">English</string>
    <string name="RateUsText">If you enjoy using CasperVPN, please take a moment to rate it. Thanks for your support!</string>
    <string name="Later">Later</string>
    <string name="NoThanks">No, thanks</string>
    <string name="RateNow">Rate now</string>
    <string name="crash_dialog_title">CasperVPN has crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the application to stop. Please help us fix this by sending us error data.</string>
    <string name="crash_dialog_comment_prompt">\nYou might add your comments about the problem below:</string>
    <string name="Welcome_Back">Welcome Back!</string>
    <string name="UserIsBlocked">User is blocked!</string>
    <string name="Invalid_Login_Credentials">Invalid email and/or password</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="LOGIN">LOGIN</string>
    <string name="Login">Login</string>
    <string name="ForgotPassword">Forgot Password?</string>
    <string name="DontHaveAnAccount">Don\'t have an account?</string>
    <string name="SignUp">Sign Up</string>
    <string name="SIGNUP">SIGN UP</string>
    <string name="InvalidUserName">Invalid Username</string>
    <string name="InvalidPassword">Invalid Password</string>
    <string name="AboutUs">About us</string>
    <string name="TermsAndConditions">Terms and Conditions</string>
    <string name="WhatIsCasperVPN">What is CasperVPN</string>
    <string name="PrivacyPolicy">Privacy Policy</string>
    <string name="HowSubscriptionWorks">How Subscription Works</string>
    <string name="Feature">Feature</string>
    <string name="Speed">Speed</string>
    <string name="Fastest">Fastest</string>
    <string name="VeryFast">Very Fast</string>
    <string name="Slow">Slow</string>
    <string name="Intermediate">Intermediate</string>
    <string name="Fast">Fast</string>
    <string name="Security">Security</string>
    <string name="Unsecure">Unsecure</string>
    <string name="Secure">Secure</string>
    <string name="HighlySecure">Highly Secure</string>
    <string name="Usage">Usage</string>
    <string name="EasyToUse">Easy to use</string>
    <string name="UsedPorts">Used Ports</string>
    <string name="FAQ">FAQ</string>
    <string name="Disclosure">Disclosure</string>
    <string name="General">General</string>
    <string name="ProhibitedActivities">Prohibited Activities</string>
    <string name="SignInPolicies">Sign in Policies</string>
    <string name="PrivacyTermsAndPolicy">Privacy Terms and Policy</string>
    <string name="AcceptanceOfTermsAndPolicies">Acceptance Of Terms And Policies</string>
    <string name="GettingStarted1">WELCOME TO CASPERVPN</string>
    <string name="NO">NO</string>
    <string name="YES">YES</string>
    <string name="General_Data">These are the terms of service that you agree on by registering and using the services of CasperVPN. It is only under these conditions that CasperVPN allows users to use its service. CasperVPN is not a service to be used for criminal activities. It is an Internet security and privacy service. You accept not to violate any law of any jurisdiction that you are originating from. It is the users responsibility to know and comprehend any and all relevant laws related to any jurisdiction or venue that concerns you and your actions. CasperVPN will not be liable in any way or form for actions done by its users. This includes any criminal or civil liability for harm, executed or not executed beyond any money paid for CasperVPN services by any individual. You agree to preserve your username/password and CasperVPN system from unauthorized usage. You are responsible for every single action that occurs on CasperVPN where your username/password was used for establishing the VPN connection. You agree not to use our services for port scanning, sending spam, sending opt-in e-mail, scanning for open relays or open proxies, sending unsolicited e-mail or any version or type of e-mail sent in vast quantities even if the e-mail is lastly sent off through another server. It is forbidden to launch any pop-ups from our service. You accept not to assault in any way or form any other network or computer while using our services. CasperVPN is intolerant about the exploitation of children photographically, digitally or in any other way.</string>
    <string name="Usage_Data">You accept not to give or share your username and password to others. CasperVPN, owners, employees, agents and others that are involved with CasperVPN services are not in any way or form liable for any harm of any sort executed or not executed, resulting or arising through or from the use of any account registered with CasperVPN services. In any event CasperVPN will never be liable for any harm caused by miss usage of the service by its users. And this includes but is not limited to, attorney fees or court costs irrespective of any laws that may address it otherwise.</string>
    <string name="ProhibitedActivities_Data">Criminal Activity – any client who commits any of these criminal actions: use of stolen credit cards, credit card fraud, PayPal fraud, bank fraud, e-gold fraud, Paysera fraud, WebMoney fraud, Bitcoin fraud, mail fraud, extortion, blackmail, kidnapping, rape, murder, sale of stolen credit cards, sale of stolen goods, sending email or operating websites to perform identity theft, hacking, harming, phishing, spamming of any form, in or through our service using our resources leaves with a terminated account. This is the whole agreement. CasperVPN may rewrite the terms of service from time to time. The terms of service become active from the time it is updated at our website. It is the responsibility of the client to check for the new Terms of Service every once in a while. CasperVPN can terminate any user account for violating terms of service instantly without any refund and notice.  Or suspend the account until further clarification or investigation of the user. If your account has been suspended you must contact us in order to see if the case can be rectified. We shall wait a substantiated period of time before we close a user account permanently and shut down all billing.</string>
    <string name="SignInPolicies_Data">CasperVPN does not monitor, store or record logs for any VPN user. We do not store connection time stamps, used bandwidth, traffic logs or IP addresses. We are not related to any form of censorship and we will never give away your personal information to any third party. We do not fulfill any information request unless it comes with a court order of competent jurisdiction. No one can have access to our servers since they are in an extremely secure environment. In addition no user activity will be stored on our servers.  We are and will always protect your privacy.</string>
    <string name="PrivacyTermsAndPolicy_Data">CasperVPN does not keep or store any logs.  However, we need to keep some information about the users that are necessary for our existence and user support. •	User e-mail – to send the latest CasperVPN news and to retrieve a lost password. •	Username – it is necessary to make a VPN connection. •	Payment information with your preferred payment gateway– we store billing information in case of a refund request.</string>
    <string name="TermsAndConditionDisclosure_Data">You have a right to cancel your account at any time by contacting us. If the account gets canceled the money you have spent on the VPN account will not be reimbursed. Your account must be active in order to cancel it.</string>
    <string name="AcceptanceOfTermsAndPolicies_Data">By logging in to any CasperVPN service, you agree to the CasperVPN Terms and conditions of the Service including all other policies incorporated by reference. These terms and conditions may be periodically updated, by accepting these terms and conditions you are also accepting any information about future changes to this agreement if applied.</string>
    <string name="Ourservice">You can view our Terms of Service <font color='red'>here</font>.</string>
    <string name="HowsubscriptionworksInfo1">Payment will be charged to Coogle play store Account at confirmation of purchase. </string>
    <string name="HowsubscriptionworksInfo2">Subscription automatically renews unless auto-renew is turned off at least 24-hours before the end of the current period. </string>
    <string name="HowsubscriptionworksInfo3">Account will be charged for renewal within 24-hours prior to the end of the current period, and identify the cost of the renewal. </string>
    <string name="HowsubscriptionworksInfo4">Subscription may be managed by the user and auto-renewal may be turned off by going to the user\'s Account Settings after purchase.</string>
    <string name="HowsubscriptionworksInfo5">Any unused portion of a free trial period, if offered, will be forfeited when the user purchases a subscription to that publication, where applicable.</string>
    <string name="YourPrivacy">Your Privacy</string>
    <string name="YourPrivacyInfo">We strive to collect the minimum amount of information required to operate our service. You can see our privacy policy <font color='blue'>here</font>.</string>
</resources>