<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    custom:context=".screens.Privacy_Policy">

    <include
        layout="@layout/toolbar_title_and_menu"
        android:id="@+id/AppBarLayout"/>

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.caspervpn.vpn.helper.MyTextView
                        style="@style/ParagraphTitleNoIcon"
                        android:text="@string/HowSubscriptionWorks" />

                </LinearLayout>

                <com.caspervpn.vpn.helper.MyTextView
                    android:id="@+id/ourservicetxt"
                    style="@style/ParagraphText"
                    android:text="@string/Ourservice" />

                <com.caspervpn.vpn.helper.MyTextView
                    style="@style/ParagraphText"
                    android:text="@string/HowsubscriptionworksInfo1" />

                <com.caspervpn.vpn.helper.MyTextView
                    style="@style/ParagraphText"
                    android:text="@string/HowsubscriptionworksInfo2" />

                <com.caspervpn.vpn.helper.MyTextView
                    style="@style/ParagraphText"
                    android:text="@string/HowsubscriptionworksInfo3" />


                <com.caspervpn.vpn.helper.MyJustifiedTextView
                    style="@style/ParagraphText"
                    android:text="@string/HowsubscriptionworksInfo4" />

                <com.caspervpn.vpn.helper.MyJustifiedTextView
                    style="@style/ParagraphText"
                    android:text="@string/HowsubscriptionworksInfo5" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.caspervpn.vpn.helper.MyTextView
                        style="@style/ParagraphTitleNoIcon"
                        android:text="@string/YourPrivacy" />

                </LinearLayout>


                <com.caspervpn.vpn.helper.MyJustifiedTextView
                    android:id="@+id/PrivacyPolicytxt"
                    style="@style/ParagraphText"
                    android:text="@string/YourPrivacyInfo" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>

