<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    custom:context=".screens.Terms_And_Conditions">

    <include
        layout="@layout/toolbar_title_and_menu"
        android:id="@+id/AppBarLayout"/>

    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <com.caspervpn.vpn.helper.MyTextView
                    style="@style/ParagraphTitleNoIcon"
                    android:text="@string/General"/>

            </LinearLayout>

            <com.caspervpn.vpn.helper.MyJustifiedTextView
                style="@style/ParagraphText"
                android:text="@string/General_Data" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.caspervpn.vpn.helper.MyTextView
                        style="@style/ParagraphTitleNoIcon"
                        android:text="@string/Usage" />

                </LinearLayout>

                <com.caspervpn.vpn.helper.MyJustifiedTextView
                    style="@style/ParagraphText"
                    android:text="@string/Usage_Data" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.caspervpn.vpn.helper.MyTextView
                        style="@style/ParagraphTitleNoIcon"
                        android:text="@string/ProhibitedActivities" />

                </LinearLayout>

                <com.caspervpn.vpn.helper.MyJustifiedTextView
                    style="@style/ParagraphText"
                    android:text="@string/ProhibitedActivities_Data" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.caspervpn.vpn.helper.MyTextView
                        style="@style/ParagraphTitleNoIcon"
                        android:text="@string/SignInPolicies" />

                </LinearLayout>

                <com.caspervpn.vpn.helper.MyJustifiedTextView
                    style="@style/ParagraphText"
                    android:text="@string/SignInPolicies_Data"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.caspervpn.vpn.helper.MyTextView
                        style="@style/ParagraphTitleNoIcon"
                        android:text="@string/PrivacyTermsAndPolicy" />

                </LinearLayout>

                <com.caspervpn.vpn.helper.MyJustifiedTextView
                    style="@style/ParagraphText"
                    android:text="@string/PrivacyTermsAndPolicy_Data" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.caspervpn.vpn.helper.MyTextView
                        style="@style/ParagraphTitleNoIcon"
                        android:text="@string/Disclosure" />

                </LinearLayout>

                <com.caspervpn.vpn.helper.MyJustifiedTextView
                    style="@style/ParagraphText"
                    android:text="@string/TermsAndConditionDisclosure_Data" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <com.caspervpn.vpn.helper.MyTextView
                        style="@style/ParagraphTitleNoIcon"
                        android:text="@string/AcceptanceOfTermsAndPolicies" />

                </LinearLayout>

                <com.caspervpn.vpn.helper.MyJustifiedTextView
                    style="@style/ParagraphText"
                    android:text="@string/AcceptanceOfTermsAndPolicies_Data"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>

